[561115] Implement a Websocket-based transport for Net4j
https://bugs.eclipse.org/bugs/show_bug.cgi?id=561115