@@ -113,9 +113,9 @@ public class FastListTest extends AbstractOMTest
   public void testRemoveMiddleOfThree()
   {
     TestList list = new TestList();
-    Integer one = new Integer(1);
-    Integer two = new Integer(2);
-    Integer three = new Integer(3);
+    Integer one = Integer.valueOf(1);
+    Integer two = Integer.valueOf(2);
+    Integer three = Integer.valueOf(3);
 
     list.add(one);
     list.add(two);
